--- a/Coding/Labs/Lab_4 - Generalization/Lab 4 - Part C - Random Forest.ipynb
+++ b/Coding/Labs/Lab_4 - Generalization/Lab 4 - Part C - Random Forest.ipynb
@@ -26,26 +26,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Shape of X : (100, 2)\n",
-      "Shape of y : (100,)\n",
-      "Head of sample data X :\n",
-      " [[34.62365962 78.02469282]\n",
-      " [30.28671077 43.89499752]\n",
-      " [35.84740877 72.90219803]\n",
-      " [60.18259939 86.3085521 ]\n",
-      " [79.03273605 75.34437644]]\n",
-      "Head of sample data y :\n",
-      " [0. 0. 0. 1. 1.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib notebook\n",
     "import numpy as np\n",
@@ -58,14 +41,7 @@
     "\"\"\" TODO:\n",
     "Print a small subset of X and y to see how the data looks like.\n",
     "\"\"\"\n",
-    "X = np.array(X)\n",
-    "y = np.array(y)\n",
-    "\n",
-    "print(f\"Shape of X : {X.shape}\")\n",
-    "print(f\"Shape of y : {y.shape}\")\n",
-    "\n",
-    "print(\"Head of sample data X :\\n\" , X[:5])\n",
-    "print(\"Head of sample data y :\\n\" , y[:5])"
+    " "
    ]
   },
   {
@@ -78,22 +54,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Predictions: [0. 0. 0. 1. 1. 0. 1. 1. 1. 1. 0. 0. 1. 1. 0. 1. 1. 0. 1. 1. 0. 1. 0. 0.\n",
-      " 1. 1. 1. 0. 0. 0. 1. 1. 0. 1. 0. 0. 0. 1. 0. 0. 1. 0. 1. 0. 0. 0. 1. 1.\n",
-      " 1. 1. 1. 1. 1. 0. 0. 0. 1. 0. 1. 1. 1. 0. 0. 0. 0. 0. 1. 0. 1. 1. 0. 1.\n",
-      " 1. 1. 1. 1. 1. 1. 0. 0. 1. 1. 1. 1. 1. 1. 0. 1. 1. 0. 1. 1. 0. 1. 1. 1.\n",
-      " 1. 1. 1. 1.]\n",
-      "Training Accuracy: 100.0%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\" TODO:\n",
     "Read and run the following example code to see how to use a \n",
@@ -125,19 +88,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The number of features : 2\n",
-      "The number of data points : 100\n",
-      "Training Accuracy: 97.0%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from scipy import stats\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
@@ -164,40 +117,30 @@
     "    for itr in range(n_trees):\n",
     "        # TODO: select randomly n_features indices between 0 and d and store them in ids_columns\n",
     "        # ids_columns = ... # you can use np.random.choice here\n",
-    "        ids_columns = np.random.choice(d, n_features, replace=False)\n",
-    "        # print(ids_columns)\n",
+    "        \n",
     "        \n",
     "        \n",
     "        # TODO: select randomly n_samples indices between 0 and n and store them in ids_samples\n",
     "        # ids_samples = ... # you can use np.random.choice here\n",
-    "        ids_samples = np.random.choice(n, n_samples, replace=False)\n",
-    "        # print(f\"ids samples : {ids_samples}\")\n",
+    "   \n",
     "        \n",
     "        \n",
     "        # TODO: select the subset of X corresponding to the rows ids_samples and the columns ids_columns\n",
     "        # Xsub = ...\n",
-    "        Xsub = np.array(X[ids_samples, ids_columns])\n",
-    "        Xsub = Xsub.reshape(-1 , 1)\n",
-    "        # print(\"----------------\")\n",
-    "        # print(f\"Id columns : {ids_columns}\")\n",
-    "        # print(f\"Id samples : {ids_samples}\")\n",
-    "        # print(f\"X sub : {Xsub.ndim}\")\n",
-    "        \n",
+    "         \n",
     "        \n",
     "        # TODO: select the subset of y corresponding to ids_samples\n",
     "        # ysub = ...\n",
-    "        ysub = np.array(y[ids_samples])\n",
-    "        ysub = ysub.ravel()\n",
-    "        # print(f\"Shape of y sub : {ysub.ndim}\")\n",
+    "        \n",
     "        \n",
     "        # TODO: train a decision tree classifier clf, based on the training subset: Xsub, ysub\n",
     "        # clf = ...\n",
-    "        clf = DecisionTreeClassifier(random_state= 0).fit(Xsub , ysub)\n",
+    "      \n",
     "        \n",
     "        \n",
     "        # TODO: save the trained decision tree classifier (clf) and the corresponding \n",
     "        # feature indices (ids_columns) used to train this classifier, into the list clfs.\n",
-    "        clfs.append((clf, ids_columns))\n",
+    "         \n",
     "        \n",
     "    return clfs\n",
     "\n",
@@ -206,22 +149,17 @@
     "Complete the definition of the function predict(clfs, X) which allows to predict the class-labels \n",
     "for the instances in the given dataset X, using the ensemble clfs returned by your function previous function.\n",
     "\"\"\"\n",
-    "def predict(clfs, X):\n",
-    "    predictions = []\n",
-    "    for clf , index in clfs:\n",
-    "        preds = clf.predict(X[: ,index])\n",
-    "        predictions.append(preds)\n",
-    "    return stats.mode(predictions)[0]\n",
+    " \n",
     "\n",
     "\n",
     "\"\"\" TODO:\n",
     "Uncomment the code below to test your functions:\n",
     "\"\"\"\n",
-    "clfs = train(X, y, n_features=1, n_samples=50, n_trees=10)\n",
-    "y_pred = predict(clfs, X)\n",
+    "# clfs = train(X, y, n_features=1, n_samples=50, n_trees=10)\n",
+    "# y_pred = predict(clfs, X)\n",
     "\n",
-    "acc = np.mean(y_pred == y) * 100\n",
-    "print(\"Training Accuracy: {}%\".format(acc))"
+    "# acc = np.mean(y_pred == y) * 100\n",
+    "# print(\"Training Accuracy: {}%\".format(acc))"
    ]
   },
   {
@@ -238,18 +176,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[80.0, 30.0, 80.0, 60.0, 60.0, 50.0, 80.0, 40.0, 60.0, 60.0]\n",
-      "Mean : 60.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# TODO (optional) ...\n",
     "#shuffle the data \n",
